--- a/styles/style.css
+++ b/styles/style.css
@@ -14,9 +14,18 @@
   margin: 0px;
   padding: 0px;
 }
+body{
+  background-color: #F5F8FF;
+}
 /* shared styles  */
 .primary-color{
   color:#4E47FF;
+}
+.main-color{
+  color: #252432;
+}
+.secondary-color{
+  color: rgba(0, 0, 0, 0.50);
 }
 .btn-primary{
   color: #FFF;
@@ -60,3 +69,25 @@ header {
   
   
 }
+.action-container{
+  display: flex;
+  justify-content: space-between;
+  margin: 116px 150px;
+  align-items: center;
+  
+  
+}
+.action-title{
+  font-size: 42px;
+  font-weight: 700;
+  margin-bottom: 23px;
+}
+.action-description{
+  font-size: 24px;
+  font-weight: 400px;
+  margin-bottom: 23px;
+}
+.action-img img{
+  border-radius: 48px;
+}
+
