--- a/styles/style.css
+++ b/styles/style.css
@@ -90,4 +90,31 @@ header {
 .action-img img{
   border-radius: 48px;
 }
+.productive-users-container{
+  text-align: center;
+  background-color: rgba(78, 71, 255, 0.10);
+  margin: 116px 150px;
+  border-radius: 24px;
+  padding: 50px 80px;
+}
+.productive-title{
+  font-size: 38px;
+  font-weight: 700;
+}
+.productive-info{
+  display: flex;
+  gap: 158px;
+  justify-content: center;
+  margin-top: 40px;
+}
+.quantity{
+  font-size: 80px;
+  font-weight: 700;
+}
+.subtitle{
+  font-size: 20px;
+  font-weight: 400;
+  
+}
+
 
