--- a/styles/style.css
+++ b/styles/style.css
@@ -165,5 +165,32 @@ header {
   justify-content: space-evenly;
   gap: 20px;
 }
+.focus-container{
+  text-align: center;
+  background-color: #FFF;
+  margin: 130px 150px 90px;
+  padding-top: 70px;
+  padding-bottom: 70px;
+
+  
+}
+
+.focus-title{
+  font-size: 50px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+.focus-description{
+  margin-bottom: 20px;
+  font-size: 16px;
+  font-weight: 400;
+}
+.focus-info{
+  margin-bottom: 20px;
+}
+.focus-img img{
+  border-radius: 48px;
+}
+
 
 
