--- a/styles/style.css
+++ b/styles/style.css
@@ -37,10 +37,15 @@ body {
   border-radius: 10px;
   background-color: #4e47ff;
 }
-
+.btn-primary:hover{
+  background-color: cadetblue;
+  padding: 13px 38px;
+}
+/* header styles  */
 header {
   background-image: url("../Assets/Hero-bg.png");
 }
+/* navbar styles */
 .nav-bar {
   display: flex;
   justify-content: space-between;
@@ -54,6 +59,7 @@ header {
   font-size: 34px;
   font-weight: 900;
 }
+/* banner styles  */
 .banner-container {
   text-align: center;
   padding-top: 158px;
@@ -64,6 +70,9 @@ header {
   font-weight: 700x;
   margin-bottom: 37px;
 }
+/* main section styles  */
+
+/* action section styles  */
 .action-container {
   display: flex;
   justify-content: space-between;
@@ -83,6 +92,7 @@ header {
 .action-img img {
   border-radius: 48px;
 }
+/* productive users styles  */
 .productive-users-container {
   text-align: center;
   background-color: rgba(78, 71, 255, 0.1);
@@ -108,6 +118,7 @@ header {
   font-size: 20px;
   font-weight: 400;
 }
+/* users feedback section styles  */
 .users-feedback-container {
   margin: auto 150px;
 }
@@ -118,7 +129,7 @@ header {
   margin-bottom: 50px;
 }
 .users-card {
-  border-radius: 1px solid #f2eded;
+  border: 1px solid #f2eded;
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 14px;
   padding: 24px;
@@ -138,12 +149,12 @@ header {
 .reviewer-name {
   font-size: 16px;
   font-weight: 600;
-  color: #666666;
+  color: rgba(0, 0, 0, 0.6);
 }
 .date {
   font-size: 16px;
   font-weight: 400;
-  color: #666666;
+  color:  rgba(0, 0, 0, 0.4);
 }
 .reviewer-container {
   display: flex;
@@ -157,12 +168,14 @@ header {
   justify-content: space-evenly;
   gap: 20px;
 }
+/* focus section styles  */
 .focus-container {
   text-align: center;
   background-color: #fff;
   margin: 130px 150px 90px;
   padding-top: 70px;
   padding-bottom: 70px;
+  border-radius: 14px;
 }
 
 .focus-title {
@@ -226,4 +239,38 @@ input[type="email"] {
   font-size: 18px;
   font-weight: 500;
   color: #000;
+}
+/* foooter section styles  */
+footer{
+  background-color: #FFF;
+}
+.footer-info{
+  text-align: center;
+  padding: 105px 455px;
+}
+.footer-title{
+  font-size: 100px;
+  font-weight: 900;
+  margin-bottom: 8px;
+}
+.footer-description{
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+
+.contact-menu ul{
+  display: flex;
+  justify-content: center;
+  gap: 48px;
+}
+.contact-menu ul li{
+  list-style: none;
+  
+}
+.contact-menu ul li a{
+  font-size: 16px;
+  font-weight: 400;
+  text-decoration: none;
+  
 }
